[package]
name = "rusty_qjs"
version = "0.1.0"
edition = "2021"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
license = "MIT"
repository = "https://github.com/ahabhgk/rusty_qjs"
description = "Rust bindings to QuickJS"

[features]
local = []

[dependencies]
libc = "0.2.107"
thiserror = "1.0.30"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[workspace]
members = ["./derive", "./qtok"]
