[package]
name = "rusty_qjs"
version = "0.0.1"
edition = "2021"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
license = "MIT"
repository = "https://github.com/ahabhgk/rusty_qjs"
description = "Rust bindings to QuickJS"
exclude = ["src/sys/*"]

[features]
local = []

[package.metadata.docs.rs]
all-features = true

[dependencies]
libc = "0.2.111"
thiserror = "1.0.39"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[workspace]
members = ["./qtok"]
