[package]
name = "qtok"
version = "0.1.0"
authors = ["ahabhgk"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ahabhgk/qtok.js"
description = "The extensible tiny JavaScript runtime built with QuickJS, tokio and ❤️"

[[bin]]
name = "qtok"
path = "main.rs"

[dependencies]
qtok_core = { path = "../core" }

anyhow = "1.0.44"
clap = "3.0.0-beta.4"
libquickjs-sys = { version = "0.10.0", features = ["patched"] }
tokio = { version = "1.12.0", features = ["full"] }
