[package]
name = "qtok"
version = "0.1.0"
edition = "2018"
authors = ["ahabhgk"]
license = "MIT"
repository = "https://github.com/ahabhgk/qtok.js"
description = "The extensible tiny JavaScript runtime built with QuickJS, tokio and ❤️"

[[bin]]
name = "qtok"
path = "main.rs"

[dependencies]
rusty_qjs = { path = "../rusty_qjs" }
libquickjs-sys = { path = "../libquickjs-sys" }

anyhow = "1.0.44"
clap = "3.0.0-beta.4"
tokio = { version = "1.12.0", features = ["full"] }
futures = "0.3.17"

[dev-dependencies]
os_pipe = "0.9.2"
