[package]
name = "rusty_qjs_derive"
version = "0.0.1"
edition = "2021"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
license = "MIT"
repository = "https://github.com/ahabhgk/rusty_qjs"
description = "rusty_qjs procedural macros"

[dependencies]
proc-macro2 = "1.0.32"
quote = "1.0.10"
syn = {version = "1.0.81", features = ["fold", "full"]}

[lib]
proc-macro = true
