[package]
name = "qtok"
version = "0.0.1"
edition = "2021"
authors = ["ahabhgk <ahabhgk@gmail.com>"]
license = "MIT"
repository = "https://github.com/ahabhgk/rusty_qjs"
description = "Toy JavaScript runtime built with rusty_qjs and tokio"

[[bin]]
name = "qtok"

[dependencies]
rusty_qjs = { path = "../", features = ["local"] }

anyhow = "1.0.51"
thiserror = "1.0.30"
clap = "3.0.0-beta.5"
tokio = { version = "1.14.0", features = ["full"] }
futures = "0.3.18"

[dev-dependencies]
os_pipe = "1.0.0"
