[package]
name = "rusty_qjs"
version = "0.1.0"
authors = ["ahabhgk"]
edition = "2018"
license = "MIT"
repository = "https://github.com/ahabhgk/qtok.js"
description = "The extensible tiny JavaScript runtime built with QuickJS, tokio and ❤️"

[lib]
path = "lib.rs"

[dependencies]
libquickjs-sys = { path="../libquickjs-sys" }
